--- a/Pages/index.html
+++ b/Pages/index.html
@@ -12,23 +12,23 @@
 
     <div id="navbar">
         <a class="logo-box" href="index.html">
-        <img src="../Images/logo3.svg" alt="Mental Assist Logo" width="180rem" height="90rem">
+        <img src="../Images/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Images/logo2.svg';" onmouseout="this.src='../Images/logo.svg';">
     </a>
 
-            <div class="topnav-right">
-        <a class="active" href="index.html">
+        <div class="topnav-right">
+        <a class="underline" href="index.html">
             <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
         </a>
         
-        <a href="index.html">
+        <a class="underline" href="index.html">
             <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
         </a>
 
-        <a href="index.html">
+        <a class="underline-active" href="index.html">
             <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
         </a>
 
-        <a href="index.html">
+        <a class="underline" href="index.html">
             <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
         </a>
 
