--- a/Pages/index.html
+++ b/Pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ivan Todorov">
     <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css"/>
-    <title>Mental Assist</title>
+    <title>Mental Assist | Homepage</title>
 </head>
 <body>
 
@@ -16,25 +16,29 @@
     </a>
 
         <div class="topnav-right">
-        <a class="underline" href="index.html">
+        <a class="underline" href="mindfulness.html">
             <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
         </a>
         
-        <a class="underline" href="index.html">
+        <a class="underline" href="habits.html">
             <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
         </a>
 
-        <a class="underline-active" href="index.html">
+        <a class="underline" href="diet.html">
             <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
         </a>
 
-        <a class="underline" href="index.html">
+        <a class="underline" href="lockdown.html">
             <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
         </a>
 
+        <a class="underline" href="clinics.html">
+            <img src="../Images/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
+        </a>
       </div>
       </div>
       test giga baba
+
 
 </body>
 </html>
