mindfulness-final-wave

--- a/Pages/mindfulness.html
+++ b/Pages/mindfulness.html
@@ -107,15 +107,28 @@
             
             Yoga and tai-chi can also help with developing awareness of your breathing.
     </section>
-    <div class="spacer layer5"></div>
-    <section class="cn-purple cn-text-white">
-        <h1 class="cn-title-white">Is mindfulness helpful for everyone?</h1>
+    <div class="spacer layer9"></div>
+    <section class="cn-purple cn-text">
+        <h1 class="cn-title">Is mindfulness helpful for everyone?</h1>
         "Mindfulness isn't the answer to everything, and it's important that our enthusiasm doesn't run ahead of the evidence," says Professor Williams.
 
             "There's encouraging evidence for its use in health, education, prisons and workplaces, but it's important to realise that research is still going on in all of these fields. Once we have the results, we'll be able to see more clearly who mindfulness is most helpful for."
     </section>
-    <div class="spacer layer6"></div>
+    <div class="spacer layer10"></div>
 
+    <footer>
+        <ul class=”footer-links”>
+          <li>
+            <a href=”/about/”>About</a>
+          </li>
+          <li>
+            <a href=”/privacy-policy/”>Privacy Policy</a>
+          </li>
+          <li>
+            <a href=”/disclaimer/”>Disclaimer</a>
+          </li>
+       </ul>
+      </footer>
 
 </body>
 </html>
