--- a/Pages/mindfulness.html
+++ b/Pages/mindfulness.html
@@ -116,19 +116,11 @@
     </section>
     <div class="spacer layer10"></div>
 
-    <footer>
-        <ul class=”footer-links”>
-          <li>
-            <a href=”/about/”>About</a>
-          </li>
-          <li>
-            <a href=”/privacy-policy/”>Privacy Policy</a>
-          </li>
-          <li>
-            <a href=”/disclaimer/”>Disclaimer</a>
-          </li>
-       </ul>
-      </footer>
+      <div class="footer-content">
+        <b>Mental Assist</b>
+        Glasgow Caledonian University - Honours Project [MHW225671] </br>
+        Ⓒ 2022 Copyright: Ivan Todorov [S1822426]
+    </div>
 
 </body>
 </html>
