habits page template

--- a/Pages/clinics.html
+++ b/Pages/clinics.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ivan Todorov">
-    <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css"/>
-    <title>Mental Assist | Mindfulness</title>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Ivan Todorov">
+      <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css"/>
+      <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
+      <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
+      <title>Mental Assist | Habits</title>
 </head>
 <body>
 
@@ -55,6 +57,16 @@
 
 </section>
 <div class="spacer layer8"></div>
-
+<div class="footer-content">
+    <b>Mental Assist</b>
+    Glasgow Caledonian University - Honours Project [MHW225671] </br>
+    Ⓒ 2022 Copyright: Ivan Todorov [S1822426]
+    <div class="footer-link">
+       <a class="footer-link-button" href="https://www.facebook.com/GlasgowCaledonianUniversity/" target="_blank"> <i class="fab fa-facebook-f icon"> </i></a>
+       <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
+       <a class="footer-link-button" href="https://www.linkedin.com/school/glasgow-caledonian-university/" target="_blank"> <i class="fab fa-linkedin-in icon"></i></a></li>
+       <a class="footer-link-button" href="https://www.instagram.com/gcu_studentlife/" target="_blank"><i class="fab fa-instagram-square"> </i></a></li>
+    </div>
+ </div>
 </body>
 </html>
