--- a/Pages/habits.html
+++ b/Pages/habits.html
@@ -37,7 +37,7 @@
       <section>
          
 
-            <svg width="90" height="80" viewBox="0 0 164 209" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="90" height="90" viewBox="0 0 164 209" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M87.385 57.346C85.049 57.346 83.158 59.24 83.158 61.572V114.426L51.117 137.041C49.206 138.387 48.761 141.02 50.102 142.918C50.932 144.098 52.231 144.717 53.56 144.717C54.406 144.717 55.252 144.47 55.995 143.934L89.828 120.055C90.942 119.254 91.611 117.975 91.611 116.605V61.571C91.611 59.231 89.721 57.346 87.385 57.346Z" fill="black"/>
                 <path d="M158.385 112.906C158.385 71.402 124.618 37.635 83.117 37.635C41.608 37.635 7.842 71.402 7.842 112.906C7.842 136.629 18.899 157.783 36.099 171.592L20.962 197.46C19.785 199.474 20.462 202.065 22.476 203.254C23.141 203.642 23.879 203.823 24.605 203.823C26.058 203.823 27.469 203.072 28.253 201.735L43.027 176.503C54.649 183.857 68.375 188.182 83.125 188.182C97.866 188.182 111.584 183.866 123.206 176.512L137.972 201.743C138.756 203.08 140.176 203.832 141.62 203.832C142.347 203.832 143.081 203.65 143.758 203.262C145.773 202.074 146.448 199.498 145.269 197.468L130.131 171.609C147.316 157.791 158.385 136.629 158.385 112.906ZM83.109 179.722C46.268 179.722 16.285 149.752 16.285 112.907C16.285 76.066 46.259 46.088 83.109 46.088C119.963 46.088 149.924 76.058 149.924 112.907C149.925 149.76 119.963 179.722 83.109 179.722Z" fill="black"/>
                 <path d="M13.294 53.169C14.012 53.169 14.738 52.992 15.407 52.604L62.627 25.337C63.593 24.78 64.303 23.859 64.592 22.778C64.877 21.693 64.732 20.537 64.167 19.571C55.479 4.529 36.19 -0.633996 21.155 8.045C13.871 12.255 8.663 19.039 6.484 27.165C4.31 35.295 5.428 43.78 9.625 51.056C10.413 52.418 11.833 53.169 13.294 53.169ZM14.647 29.353C16.236 23.41 20.057 18.441 25.381 15.363C28.996 13.279 32.953 12.28 36.858 12.28C43.478 12.28 49.949 15.128 54.398 20.328L15.163 42.976C13.624 38.634 13.43 33.917 14.647 29.353Z" fill="black"/>
@@ -46,66 +46,74 @@
 
          </svg>
          <h1 class="cn-title">Habits</h1>
-         It can be easy to rush through life without stopping to notice much. Paying more attention to the present moment - to your own thoughts and feelings, and to the world around you – can improve your mental wellbeing.
-         Some people call this awareness "mindfulness". Mindfulness can help us enjoy life more and understand ourselves better. You can take steps to develop it in your own life.
+         If you never seem to have enough time, better time management may help you regain control of your days.
+
+Whether it's in your job or your lifestyle as a whole, learning how to manage your time effectively can help you feel more relaxed, focused and in control.
+"The aim of good time management is to achieve the lifestyle balance you want," says Emma Donaldson-Feilder, a chartered occupational psychologist.
+
       </section>
-      <div class="spacer layer1"></div>
-      <section class="cn-yellow">
-         <h1 class="cn-title">What is mindfulness?</h1>
-         Professor Mark Williams, former director of the Oxford Mindfulness Centre, says that mindfulness means knowing directly what is going on inside and outside ourselves, moment by moment.
-         "It's easy to stop noticing the world around us. It's also easy to lose touch with the way our bodies are feeling and to end up living 'in our heads' – caught up in our thoughts without stopping to notice how those thoughts are driving our emotions and behaviour," he says.
-         "An important part of mindfulness is reconnecting with our bodies and the sensations they experience. This means waking up to the sights, sounds, smells and tastes of the present moment. That might be something as simple as the feel of a banister as we walk upstairs.
-         "Another important part of mindfulness is an awareness of our thoughts and feelings as they happen moment to moment.
-         "It's about allowing ourselves to see the present moment clearly. When we do that, it can positively change the way we see ourselves and our lives."
+      <div class="spacer layer11"></div>
+      <section class="cn-red">
+         <h1 class="cn-title-blue">Work out your goals</h1>
+         "Work out who you want to be, your priorities in life, and what you want to achieve in your career or personal life," says Emma. "That is then the guiding principle for how you spend your time and how you manage it."
+         Once you have worked out the big picture, you can then work out some short-term and medium-term goals. "Knowing your goals will help you plan better and focus on the things that will help you achieve those goals," says Emma Donaldson-Feilder.
+         A healthy mind is just as important as a healthy body, but sometimes we can forget just how important it is to form habits that ensure that you are happy, confident and secure. We all understand that we should eat well and get plenty of exercise, but what can we do to make sure that we are emotionally strong, resilient and content, as well as physically healthy?
       </section>
-      <div class="spacer layer2"></div>
+      <div class="spacer layer12"></div>
       <section class="cn-white">
-         <h1 class="cn-title">How mindfulness helps mental wellbeing</h1>
-         Becoming more aware of the present moment can help us enjoy the world around us more and understand ourselves better.
-         When we become more aware of the present moment, we begin to experience afresh things that we have been taking for granted.
-         "Mindfulness also allows us to become more aware of the stream of thoughts and feelings that we experience," says Professor Williams, "and to see how we can become entangled in that stream in ways that are not helpful.
-         "This lets us stand back from our thoughts and start to see their patterns. Gradually, we can train ourselves to notice when our thoughts are taking over and realise that thoughts are simply 'mental events' that do not have to control us.
-         "Most of us have issues that we find hard to let go and mindfulness can help us deal with them more productively. We can ask: 'Is trying to solve this by brooding about it helpful, or am I just getting caught up in my thoughts?'
-         "Awareness of this kind also helps us notice signs of stress or anxiety earlier and helps us deal with them better."
-         Mindfulness is recommended by the National Institute for Health and Care Excellence (NICE) as a way to prevent depression in people who have had 3 or more bouts of depression in the past.
+         <h1 class="cn-title">Make a list</h1>
+         To-do lists are a good way to stay organised. "Try it and see what works best for you," says Emma.
+She prefers to keep a single to-do list, to avoid losing track of multiple lists. "Keeping a list will help you work out your priorities and timings. It can help you put off the non-urgent tasks."
+Make sure you keep your list somewhere accessible. If you always have your phone, for example, keep it on your phone.
       </section>
-      <div class="spacer layer3"></div>
-      <section class="cn-green cn-text-white">
-         <h1 class="cn-title-white"> How to be more mindful</h1>
-         Reminding yourself to take notice of your thoughts, feelings, body sensations and the world around you is the first step to mindfulness.
-         </br>
-         <div class="columns">
-            <h4 class="cn-title2-white">Watch your thoughts</h4>
-            "Some people find it very difficult to practice mindfulness. As soon as they stop what they're doing, lots of thoughts and worries crowd in," says Professor Williams. 
-            "It might be useful to remember that mindfulness isn't about making these thoughts go away, but rather about seeing them as mental events.
-            "Imagine standing at a bus station and seeing 'thought buses' coming and going without having to get on them and be taken away. This can be very hard at first, but with gentle persistence it is possible.
-            "Some people find that it is easier to cope with an over-busy mind if they are doing gentle yoga or walking."
-            <h4 class="cn-title2-white">Free yourself from the past and future</h4>
-            You can practise mindfulness anywhere, but it can be especially helpful to take a mindful approach if you realise that, for several minutes, you have been "trapped" in reliving past problems or "pre-living" future worries.
-            <h4 class="cn-title2-white">Try something new</h4>
-            Trying new things, such as sitting in a different seat in meetings or going somewhere new for lunch, can also help you notice the world in a new way.
-            <h4 class="cn-title2-white">Notice the everyday</h4>
-            "Even as we go about our daily lives, we can notice the sensations of things, the food we eat, the air moving past the body as we walk," says Professor Williams. "All this may sound very small, but it has huge power to interrupt the 'autopilot' mode we often engage day to day, and to give us new perspectives on life."
-            <h4 class="cn-title2-white">Keep it regular</h4>
-            It can be helpful to pick a regular time – the morning journey to work or a walk at lunchtime – during which you decide to be aware of the sensations created by the world around you.
+      <div class="spacer layer13"></div>
+      <section class="cn-purple-light">
+         <h1 class="cn-title"> Focus on results</h1>
+         
+
+            Good time management at work means doing high-quality work, not high quantity. Emma advises concentrating not on how busy you are, but on results.
+
+"Spending more time on something doesn't necessarily achieve more," she says. "Staying an extra hour at work at the end of the day may not be the most effective way to manage your time."
          </br>
         </br>
         </div>
       </section>
-      <div class="spacer layer4"></div>
+      <div class="spacer layer14"></div>
       <section class="cn-white">
-         <h1 class="cn-title">Different mindfulness practices</h1>
-         As well as practising mindfulness in daily life, it can be helpful to set aside time for a more formal mindfulness practice.
-         Mindfulness meditation involves sitting silently and paying attention to thoughts, sounds, the sensations of breathing or parts of the body, bringing your attention back whenever the mind starts to wander.
-         Yoga and tai-chi can also help with developing awareness of your breathing.
+         <h1 class="cn-title">Have a lunch break</h1>
+         Lots of people work through their lunch break, but Emma says that can be counter-productive. "As a general rule, taking at least 30 minutes away from your desk will help you to be more effective in the afternoon," she says.
+         "Go for a walk outdoors or, better still, do some exercise," says Emma. "You'll come back to your desk re-energised, with a new set of eyes and renewed focus."
+         Planning your day with a midday break will also help you to break up your work into more manageable chunks.
       </section>
-      <div class="spacer layer9"></div>
-      <section class="cn-purple cn-text">
-         <h1 class="cn-title">Is mindfulness helpful for everyone?</h1>
-         "Mindfulness isn't the answer to everything, and it's important that our enthusiasm doesn't run ahead of the evidence," says Professor Williams.
-         "There's encouraging evidence for its use in health, education, prisons and workplaces, but it's important to realise that research is still going on in all of these fields. Once we have the results, we'll be able to see more clearly who mindfulness is most helpful for."
+      <div class="spacer layer15"></div>
+      <section class="cn-mint cn-text">
+         <h1 class="cn-title">Prioritise and practice</h1>
+         <div class="columns">
+      <h4 class="cn-title2">Prioritise important tasks</h4>
+         Tasks can be grouped into 4 categories:
+
+         <ul>
+            <li>urgent and important</li>
+            <li>not urgent but important</li>
+            <li>urgent but not important</li>
+              <li>neither urgent nor important</li>
+          </ul>  
+People who manage their time well concentrate on "not urgent but important" activities. That way they lower the chances of activities ever becoming "urgent and important".
+"The aim is to learn how to become better at reducing the number of urgent and important tasks. Having to deal with too many urgent tasks can be stressful," says Emma.
+<h4 class="cn-title2">Practise the '4 Ds'</h4>
+One study found that 1 in 3 office workers suffers from email stress. Making a decision the first time you open an email is crucial for good time management.
+
+Emma advises practising the "4 Ds":
+
+<ul>
+   <li>Delete: you can probably delete half the emails you get immediately.</li>
+   <li>Do: if the email is urgent or can be completed quickly.</li>
+   <li>Delegate: if the email can be better dealt with by someone else.</li>
+     <li>Defer: set aside time later to spend on emails that will take longer to deal with.</li>
+ </ul>  
+</div>
       </section>
-      <div class="spacer layer10"></div>
+      <div class="spacer layer16"></div>
       <div class="footer-content">
          <b>Mental Assist</b>
          Glasgow Caledonian University - Honours Project [MHW225671] </br>
